--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "animate.css": "^3.7.2",
     "apollo-boost": "^0.4.7",
     "graphql": "^14.6.0",
+    "i18next": "^19.3.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-i18next": "^11.3.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "styled-components": "^5.0.1"
